syntax = "proto3";

package protected;

option go_package = "internal/proto";


service ProtectedService {
    rpc Admin (AdminRequest) returns (AdminResponse);
}

message AdminRequest {
    string filter = 1;
}

message AdminResponse {
    string session = 1;
}
